<resources>
    <string name="add">Add</string>
    <string name="app_name">Flashcards</string>
    <string name="answerIsTrue">Answer:</string>
    <string name="question">Question:</string>
    <string name="answer_type">Answer Type:</string>
    <string name="text_answer">Text</string>
    <string name="categories">Categories:</string>
    <string name="save">Save</string>
    <string name="name_missing">Your Flashcard does not have a valid Name. (Can\'t be empty)</string>
    <string name="question_missing">Your Flashcard does not have a valid Question. (Can\'t be empty)</string>
...
