<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_card"
        android:icon="@drawable/ic_confirm"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_card"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />
</menu>